Fixed the issue with font weights not showing up heavier on Safari

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,7 @@
 body {
    background: #252525;
    color: #ffffff;
+   -webkit-font-smoothing: subpixel-antialiased;
 }
 
 section {
